
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander
- GL   Guillaume Lelarge

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2007-11-27 DP  1.8.1  Always open the PostgreSQL Help when selecting that menu
                      option, even if connected to EnterpriseDB. 
2007-11-27 DP  1.8.1  Fix EnterpriseDB public synonym loading so that they
                      aren't considered system objects.
2007-11-23 DP  1.9.0  Add an option to enable/disable rules on tables [Gullaume
                      Lelarge]
2007-11-23 DP  1.9.0  Add options to TRUNCATE and TRUNCATE...CASCADE tables.
                      [Guillaume Lelarge]
2007-11-23 DP  1.8.1  Fix path discovery on Unix so standard installs can be
                      relocated easily.
2007-11-13 DP  1.8.1  Fix character number display in the query tool.
2007-11-07 DP  1.8.1  Use popen() when testing the versions of helper apps on
                      non-windows platforms to avoid an obscure bug on PPC Macs
                      that could leave wxExecute hanging indefinitely whilst
                      waiting on a zombie process.
2007-10-30 DP  1.8.1  When creating a new index and specifying both tablespace
                      and fill factor, make sure the SQL is formulated 
                      correctly, per Stefan Wolf
2007-10-29 DP  1.8.1  Fix the locks tab on the server status dialogue so it
                      works correctly with PostgreSQL 8.3+.
2007-10-29 DP  1.8.1  Properly format the object comments shown in the
                      properties list when a collection node is selected. Per
                      report from Mike Blackwell.
2007-10-29 DP  1.8.1  Fix a bug preventing the 'on error' flag of a pgAgent job