@@ -18,8 +18,10 @@ EnterpriseDB.
 </p>
 
 <p>In order to use the debugger, a plugin is required on your server. This
-is included by default with EnterpriseDB, and is expected to be released
-for PostgreSQL in mid-2007.
+is included by default with EnterpriseDB, and is available for download on
+<a href="http://pgfoundry.org/projects/edb-debugger/">pgFoundry</a>. It is
+installed as a contrib module with the Windows distribution of PostgreSQL
+8.3 and above.
 </p>
 
 <p>The debugger may be used for both in-context and direct debugging. To
@@ -30,6 +32,11 @@ executable code. To directly debug an object, right click it and select
 the "Debug" option. The debugger will prompt you for any parameter values
 that may be required, invoke the object, and break on the first line
 of executable code.</p>
+
+<p>When entering parameter values, type the value into the appropriate cell
+on the grid, or, leave the cell empty to represent NULL, enter '' (two single 
+quotes) to represent an empty string, or to enter a literal string consisting 
+of just two single quotes, enter \'\'.</p>
 
 <p>Once the debugger session has started you can step through the code using
 the menu options, keyboard shortcuts or toolbar buttons. Breakpoints may be 
