@@ -36,6 +36,11 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-11-28 DP  1.8.1  Fix the debugger to send actual NULL values rather than
+                      'NULL' through the EnterpriseDB callable statement API.
+                      Allow parameter values to be NULL or empty strings on 
+                      both PostgreSQL and EnterpriseDB using the same syntax
+                      as the Edit Grid.
 2007-11-27 DP  1.8.1  Always open the PostgreSQL Help when selecting that menu
                       option, even if connected to EnterpriseDB. 
 2007-11-27 DP  1.8.1  Fix EnterpriseDB public synonym loading so that they
